--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,108 @@ video {
   max-width: 100%;
   width: 320px;
 }
+
+.hidden {
+  display: none;
+}
+
+a {
+  color: #6fa8dc;
+  font-weight: 300;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #3d85c6;
+  text-decoration: underline;
+}
+
+#steps a {
+  display: block;
+  margin: 0 0 0.5em 0;
+}
+
+h1 a {
+  font-weight: 300;
+  margin: 0 10px 0 0;
+  white-space: nowrap;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  margin: 0;
+  padding: 1em;
+  word-break: break-all;
+}
+
+code {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+}
+
+#container {
+  margin: 0 auto 0 auto;
+  max-width: 40em;
+  padding: 1em 1.5em 1.3em 1.5em;
+}
+
+h1 {
+  border-bottom: 1px solid #aaa;
+  font-family: 'Roboto condensed', sans-serif;
+  font-size: 32px;
+  font-weight: 500;
+  margin: 0 0 1em 0;
+  padding: 0 0 0.5em 0;
+}
+
+h2 {
+  color: #444;
+  font-family: 'Roboto condensed', sans-serif;
+  font-weight: 500;
+  line-height: 1.2em;
+  margin: 0 0 0.8em 0;
+}
+
+h3 {
+  color: #666;
+  font-family: 'Roboto condensed', sans-serif;
+  font-weight: 500;
+  margin: 1.8em 0 0.5em 0;
+  white-space: nowrap;
+}
+
+img {
+  border: none;
+  max-width: 100%;
+}
+
+p {
+  color: #444;
+  font-weight: 300;
+  line-height: 1.6em;
+  border-bottom: 1px solid #aaa;
+  padding: 0 0 20px 0;
+}
+
+section p:last-of-type {
+  margin: 0;
+}
+
+section {
+  border-bottom: 1px solid #eee;
+  margin: 0 0 2em 0;
+  padding: 0 0 2em 0;
+}
+
+section:last-of-type {
+  border-color: #ccc;
+}
+
+h1 span {
+  white-space: nowrap;
+}
+
+strong {
+  font-weight: 500;
+}
